Criar arquivos index.html style.css script.js

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 </head>
 <body>
     <h1>EMOCIONAL ANA</h1>
-    <p>ANA ESTÁ TRISTE !</p>
-    <img src="https://cdn.shopify.com/s/files/1/1061/1924/products/Sad_Face_Emoji_1024x1024.png?v=1480481055" alt="">
+    <p>ANA ESTÁ NORMAL !</p>
+    <img src="https://i.pinimg.com/originals/cf/f2/25/cff225b9cd29abc501728b4c117f7867.png" alt="">
+    <button>Dar um chocolate</button>
+    <button>Esquecer a matéria</button>
 </body>
 </html>
